--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Alec Garcia",
   "dependencies": {
+    "@material-ui/codemod": "^1.1.0",
+    "@material-ui/core": "^3.6.1",
+    "@material-ui/icons": "^3.0.1",
     "babel-register": "^6.26.0",
     "codem-isoboxer": "^0.3.4",
     "crypto-js": "^3.1.9-1",
@@ -20,19 +23,18 @@
     "json-bigint": "^0.2.3",
     "jszip": "^3.1.3",
     "jszip-utils": "0.0.2",
-    "material-ui": "^0.20.0",
     "moment": "^2.21.0",
     "net": "^1.0.2",
     "prop-types": "^15.6.1",
     "raven-js": "^3.21.0",
-    "react": "^16.2.0",
-    "react-chrome-redux": "1.3.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.6.0",
+    "react-chrome-redux": "^2.0.0-alpha.4",
+    "react-dom": "^16.6.0",
     "react-image-gallery": "^0.8.7",
     "react-lazyload": "^2.3.0",
-    "react-redux": "^5.0.2",
+    "react-redux": "^6.0.0",
     "react-tap-event-plugin": "^3.0.2",
-    "redux": "^3.6.0",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "round10": "^1.0.3",
     "style-loader": "^0.19.1"
